--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -5,8 +5,7 @@ quentin:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 5.days.ago.to_s :db %>
-
-
+  games_won: 0
 
 aaron:
   id: 2
@@ -15,5 +14,4 @@ aaron:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
-
-
+  games_won: 0
