--- a/spec/fixtures/accounts.yml
+++ b/spec/fixtures/accounts.yml
@@ -1,7 +1,3 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+champions:
+  name: The Champions
+  domain: champions
