Working on updating tests to work with accounts

--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -6,6 +6,8 @@ quentin:
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 5.days.ago.to_s :db %>
   games_won: 0
+  name: Quentin
+  display_name: Quentin
   account: champions
 
 aaron:
@@ -16,4 +18,6 @@ aaron:
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
   games_won: 0
+  name: Aaron
+  display_name: Aaron
   account: champions
