--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -5,7 +5,7 @@ quentin:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 5.days.ago.to_s :db %>
-  games_won: 0
+  matches_won: 0
   name: Quentin
   display_name: Quentin
   account: champions
@@ -17,7 +17,7 @@ aaron:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
-  games_won: 0
+  matches_won: 0
   name: Aaron
   display_name: Aaron
   account: champions
