--- a/config/assets.yml
+++ b/config/assets.yml
@@ -5,10 +5,12 @@ javascripts:
     - public/javascripts/swfobject.js
     - public/javascripts/jquery.js
     - public/javascripts/jquery-ui.js
-    - public/javascripts/jquery-fx.js
-    - public/javascripts/jquery.tablesorter.js
     - public/javascripts/rails.js
     - public/javascripts/application.js
+
+  special:
+    - public/javascripts/jquery-fx.js
+    - public/javascripts/jquery.tablesorter.js
 
 stylesheets:
   common:
