--- a/config/assets.yml
+++ b/config/assets.yml
@@ -6,6 +6,7 @@ javascripts:
     - public/javascripts/swfobject.js
     - public/javascripts/jquery.js
     - public/javascripts/jquery.tablesorter.js
+    - public/javascripts/jquery.formalize.js
     - public/javascripts/rails.js
     - public/javascripts/application.js
 
@@ -15,5 +16,6 @@ stylesheets:
     - public/stylesheets/lib/typography.css
     - public/stylesheets/lib/grid.css
     - public/stylesheets/lib/forms.css
+    - public/stylesheets/formalize.css
     - public/stylesheets/sprites.css
     - public/stylesheets/screen.css
