Use pjax (http://github.com/defunkt/jquery-pjax) on games#edit and games#new.

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,6 +7,7 @@ javascripts:
     - public/javascripts/jquery.js
     - public/javascripts/jquery.tablesorter.js
     - public/javascripts/jquery.formalize.js
+    - public/javascripts/jquery.pjax.js
     - public/javascripts/rails.js
     - public/javascripts/application.js
 
